--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body>
 デプロマシティ
 deploy（展開する）とdiploma（証明書）をかけ合わせた言葉。
 つまり、ここは存在を証明するための場所
@@ -5,3 +6,4 @@ deploy（展開する）とdiploma（証明書）をかけ合わせた言葉。
 コピーテキスト
 グリッドコンテナ
 ナビゲーションリンク
+</body>
