--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<body>
-デプロマシティ<br>
+<head>
+<h1>デプロマシティ</h1><br>
 deploy（展開する）とdiploma（証明書）をかけ合わせた言葉。
 つまり、ここは存在を証明するための場所
 
 コピーテキスト
 グリッドコンテナ
 ナビゲーションリンク
-</body>
+</head>
