--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<head>
-<h1>デプロマシティ</h1><br>
-deploy（展開する）とdiploma（証明書）をかけ合わせた言葉。
-つまり、ここは存在を証明するための場所
+    <head>
+        <h1>デプロマシティ</h1><br>
+        <h2>deploy（展開する）とdiploma（証明書）をかけ合わせた造語。</h2><br>
+        つまり、ここは存在を証明するための場所
 
 コピーテキスト
 グリッドコンテナ
