--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
     <head>
         <h1>デプロマシティ</h1><br>
         <h2>deploy（展開する）とdiploma（証明書）をかけ合わせた造語。</h2><br>
-        つまり、ここは存在を証明するための場所
-
-コピーテキスト
-グリッドコンテナ
-ナビゲーションリンク
-</head>
+        <h3>つまり、ここは存在を証明するための場所</h3>
+    </head>
+    
+    <body>
+        コピーテキスト
+        グリッドコンテナ
+        ナビゲーションリンク
+    </body>
