--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
+<html>
     <head>
         <h1>デプロマシティ</h1><br>
         <h2>deploy（展開する）とdiploma（証明書）をかけ合わせた造語。</h2><br>
         <h3>つまり、ここは存在を証明するための場所</h3>
+        link rel="stylesheet" href=“style.css" />
     </head>
     
     <body>
-        コピーテキスト
-        グリッドコンテナ
-        ナビゲーションリンク
+    <div class"wrapper">
+        <div class"typing">
+            コピーテキスト
+            グリッドコンテナ
+            ナビゲーションリンク
+        </div>
     </body>
+</html>
