--- a/note.html
+++ b/note.html
@@ -15,16 +15,11 @@
 ```
     body {
         font-family: 'Arial', sans-serif;
-        background: 
-            radial-gradient(circle at 20% 80%, rgba(102, 126, 234, 0.15) 0%, transparent 50%),
-            radial-gradient(circle at 80% 20%, rgba(118, 75, 162, 0.15) 0%, transparent 50%),
-            radial-gradient(circle at 40% 40%, rgba(102, 126, 234, 0.1) 0%, transparent 50%),
-            linear-gradient(135deg, #0f1419 0%, #1a1a2e 50%, #16213e 100%);
+        background: linear-gradient(135deg, #0f1419 0%, #1a1a2e 50%, #16213e 100%);
         color: #e0e0e0;
         line-height: 1.8;
         min-height: 100vh;
         position: relative;
-        overflow-x: hidden;
     }
 
     body::before {
@@ -34,9 +29,9 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: 
-            radial-gradient(circle at 30% 60%, rgba(102, 126, 234, 0.03) 0%, transparent 70%),
-            radial-gradient(circle at 70% 30%, rgba(118, 75, 162, 0.03) 0%, transparent 70%);
+        background: 
+            radial-gradient(circle at 30% 60%, rgba(102, 126, 234, 0.1) 0%, transparent 50%),
+            radial-gradient(circle at 70% 30%, rgba(118, 75, 162, 0.1) 0%, transparent 50%);
         pointer-events: none;
         z-index: -1;
         animation: rippleFlow 8s ease-in-out infinite;
@@ -44,11 +39,11 @@
 
     @keyframes rippleFlow {
         0%, 100% { 
-            transform: scale(1) rotate(0deg);
+            transform: scale(1);
             opacity: 0.3;
         }
         50% { 
-            transform: scale(1.1) rotate(180deg);
+            transform: scale(1.1);
             opacity: 0.5;
         }
     }
