--- a/note.html
+++ b/note.html
@@ -15,13 +15,33 @@
 ```
     body {
         font-family: 'Arial', sans-serif;
-        background: linear-gradient(135deg, #0f1419 0%, #1a1a2e 50%, #16213e 100%);
+        background: #0f1419;
         color: #e0e0e0;
         line-height: 1.8;
         min-height: 100vh;
         position: relative;
+        overflow-x: hidden;
     }
 
+    /* 動画背景 */
+    .video-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -2;
+        overflow: hidden;
+    }
+
+    .video-background video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0.4;
+    }
+
+    /* 動画の上に重ねるオーバーレイ */
     body::before {
         content: '';
         position: fixed;
@@ -30,23 +50,12 @@
         width: 100%;
         height: 100%;
         background: 
-            radial-gradient(circle at 30% 60%, rgba(102, 126, 234, 0.1) 0%, transparent 50%),
-            radial-gradient(circle at 70% 30%, rgba(118, 75, 162, 0.1) 0%, transparent 50%);
+            linear-gradient(135deg, rgba(15, 20, 25, 0.7) 0%, rgba(26, 26, 46, 0.6) 50%, rgba(22, 33, 62, 0.7) 100%);
         pointer-events: none;
         z-index: -1;
-        animation: rippleFlow 8s ease-in-out infinite;
     }
 
-    @keyframes rippleFlow {
-        0%, 100% { 
-            transform: scale(1);
-            opacity: 0.3;
-        }
-        50% { 
-            transform: scale(1.1);
-            opacity: 0.5;
-        }
-    }
+
 
     .container {
         max-width: 800px;
@@ -369,9 +378,16 @@
 
 </head>
 <body>
-    <a href="javascript:history.back()" class="back-link">← 戻る</a>
+    <!-- 動画背景 -->
+    <div class="video-background">
+        <video autoplay muted loop playsinline>
+            <source src="hamon.MOV" type="video/mp4">
+        </video>
+    </div>
 
 ```
+<a href="javascript:history.back()" class="back-link">← 戻る</a>
+
 <div class="container">
     <header class="header">
         <h1 class="main-title">思考の破片たち</h1>
