--- a/note.html
+++ b/note.html
@@ -381,7 +381,7 @@
     <!-- 動画背景 -->
     <div class="video-background">
         <video autoplay muted loop playsinline>
-            <source src="hamon.MOV" type="video/mp4">
+            <source src="hamon.mov" type="video/mp4">
         </video>
     </div>
 
