--- a/note.html
+++ b/note.html
@@ -390,8 +390,8 @@
 
 <div class="container">
     <header class="header">
-        <h1 class="main-title">思考の破片たち</h1>
-        <p class="subtitle">〜 水面に何か落としてみないと、波紋を見ることはできない 〜</p>
+        <h1 class="main-title">HAMON</h1>
+        <p class="subtitle">水面に落としてみないと、波紋を見ることはできない</p>
     </header>
 
     <main class="notes-content">
