--- a/note.html
+++ b/note.html
@@ -398,7 +398,7 @@
 <div class="container">
     <header class="header">
         <h1 class="main-title">HAMON</h1>
-        <p class="subtitle">水面に何か落としてみないと、波紋を見ることはできない</p>
+        <p class="subtitle">水面に何も落ちなければ<br>波紋を見ることはできない</p>
     </header>
 
     <main class="notes-content">
